# pybinsec

./: .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  pyproject.toml
.github/workflows/: check-bitwuzla.yml  ci.yml  inspect-binsec-examples.yml  inspect-official-binsec.yml
examples/: 00_smoke.py  01_sse_magic.py  02_flare_on_2017_2.py
pybinsec/: __init__.py  _binsec.py  exceptions.py  project.py
pybinsec/sse/: __init__.py  builder.py  runner.py  script.py
tests/: test_binsec_detection.py  test_integration.py  test_project.py  test_sse_builder.py  test_sse_runner.py  test_sse_script.py
