[project]
name = "pybinsec"
version = "0.3.0.dev0"
description = "Python bindings and high-level API for Binsec (CEA)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Sébastien Larinier" },
]
keywords = ["binsec", "symbolic-execution", "binary-analysis", "reverse-engineering", "dse"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Disassemblers",
]
dependencies = []

[project.optional-dependencies]
smt = ["pysmt>=0.9.6"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "pre-commit>=4.0",
]

[project.urls]
Homepage = "https://github.com/sebdraven/pybinsec"
Issues = "https://github.com/sebdraven/pybinsec/issues"
Binsec = "https://binsec.github.io/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pybinsec"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra --strict-markers"
markers = [
    "requires_binsec: test needs the binsec binary on PATH",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
